--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>{{ title }}</h1>
+<!-- <h1>{{ title }}</h1>
 <button (click)="toggleDivision()" class="btn btn-success">Show</button>
 
 <input [(ngModel)]="image" type="url" class="form-control">
@@ -19,7 +19,9 @@
 }
 @else {
     <p>can't show this division</p>
-}
+} -->
+
+<app-todo></app-todo>
 
 
 
