--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,9 @@
     <p>can't show this division</p>
 } -->
 
-<app-todo></app-todo>
+<div class="container">
+    <app-courses></app-courses>
+</div>
 
 
 
