--- a/src/app/pages/courses/courses.component.html
+++ b/src/app/pages/courses/courses.component.html
@@ -1,31 +1,58 @@
 <!-- .container>(.row.my-5>(.col-6>h1{List of courses})+(.col-6.text-end>btn.btn.btn-success.btn-sm{Add}))+(.row.my-4>(.form-group>label{Title}+input:text.form-control#title)+(.form-group>label{Image}+input:url.form-control#image)+(.form-group>label{Price}+input:number.form-control#price)+(.form-group>label{Content}+textarea.form-control#content)+(.d-grid.my-3>btn.btn-primary{Save})) -->
 
-<div class="container">
+
     <div class="row my-5">
         <div class="col-6">
             <h1>List of courses</h1>
         </div>
-        <div class="col-6 text-end"><button class="btn btn-success btn-sm">Add</button></div>
+        <div class="col-6 text-end">
+            <button class="btn btn-success btn-sm" (click)="changeToggleForm()">Add</button>
+        </div>
     </div>
-    <div class="row my-4">
-        <div class="form-group">
-            <label for="">Title</label>
-            <input type="text" name="" id="title" class="form-control">
+
+    @if(toggleForm) {
+        <div class="row my-4">
+           <div class="col-6 mx-auto">
+               <div class="form-group">
+                   <label for="">Title</label>
+                   <input type="text" name="" id="title" class="form-control">
+               </div>
+               <div class="form-group">
+                   <label for="">Image</label>
+                   <input type="url" name="" id="image" class="form-control">
+               </div>
+               <div class="form-group">
+                   <label for="">Price</label>
+                   <input type="number" name="" id="price" class="form-control">
+               </div>
+               <div class="form-group">
+                   <label for="">Content</label>
+                   <textarea name="" id="content" cols="30" rows="10" class="form-control"></textarea>
+               </div>
+               <div class="d-grid my-3">
+                   <button class="btn btn-primary">Save</button>
+               </div>
+           </div>
         </div>
-        <div class="form-group">
-            <label for="">Image</label>
-            <input type="url" name="" id="image" class="form-control">
-        </div>
-        <div class="form-group">
-            <label for="">Price</label>
-            <input type="number" name="" id="price" class="form-control">
-        </div>
-        <div class="form-group">
-            <label for="">Content</label>
-            <textarea name="" id="content" cols="30" rows="10" class="form-control"></textarea>
-        </div>
-        <div class="d-grid my-3">
-            <button class="btn-primary">Save</button>
-        </div>
+    }
+
+
+<div class="row mt-4 mb-2">
+    <div class="col-12 text-end">
+        <button (click)="toggleView(true)" class="btn btn-sm btn-light me-2">List</button>
+        <button (click)="toggleView(false)" class="btn btn-sm btn-light">Grid</button>
     </div>
 </div>
+
+
+
+
+@if(listView) {
+
+   <app-table-courses [dataCourses]="courses"></app-table-courses>
+}
+@else {
+
+   <app-list-courses></app-list-courses>
+}
+
