--- a/src/app/components/table-courses/table-courses.component.html
+++ b/src/app/components/table-courses/table-courses.component.html
@@ -22,7 +22,8 @@
                             <td><img width="100px" [src]="course.image" [alt]="course.title" srcset=""></td>
                             <td>{{ course.price }}</td>
                             <td class="text-end">
-                                <button class="btn btn-warning btn-sm me-1">Edit</button>
+                                <button (click)="changeStatusCourse(course)" class="btn btn-sm btn-info me-1">{{ course.enable ? 'Enable' : 'Disable' }}</button>
+                                <button (click)="editCourseEntire(course)" class="btn btn-warning btn-sm me-1">Edit</button>
                                 
                                 @if(!!course.id) {
                                     <button (click)="wantRemoveCourse(course.id)" class="btn btn-sm btn-danger">Delete</button>
