--- a/src/app/pages/courses/courses.component.html
+++ b/src/app/pages/courses/courses.component.html
@@ -15,22 +15,27 @@
            <div class="col-6 mx-auto">
                <div class="form-group">
                    <label for="">Title</label>
-                   <input type="text" name="" id="title" class="form-control">
+                   <input [(ngModel)]="courseForm.title" type="text" name="" id="title" class="form-control">
                </div>
                <div class="form-group">
                    <label for="">Image</label>
-                   <input type="url" name="" id="image" class="form-control">
+                   <input [(ngModel)]="courseForm.image" type="url" name="" id="image" class="form-control">
                </div>
                <div class="form-group">
                    <label for="">Price</label>
-                   <input type="number" name="" id="price" class="form-control">
+                   <input [(ngModel)]="courseForm.price" type="number" name="" id="price" class="form-control">
                </div>
                <div class="form-group">
                    <label for="">Content</label>
-                   <textarea name="" id="content" cols="30" rows="10" class="form-control"></textarea>
+                   <textarea [(ngModel)]="courseForm.content" name="" id="content" cols="30" rows="2" class="form-control"></textarea>
                </div>
                <div class="d-grid my-3">
-                   <button class="btn btn-primary">Save</button>
+                   @if(editMode) {
+                       <button (click)="updateCourse()" class="btn btn-warning">Update</button>
+                   }
+                   @else {
+                       <button (click)="saveCourse()" class="btn btn-primary">Save</button>
+                   }
                </div>
            </div>
         </div>
@@ -49,7 +54,7 @@
 
 @if(listView) {
 
-   <app-table-courses (deleteCourseFromChid)="deleteCourseFromParent($event)" [dataCourses]="courses"></app-table-courses>
+   <app-table-courses (statusCourseFromChild)="enableOrDisableCourse($event)" (editCourseFromChild)="editCourse($event)" (deleteCourseFromChid)="deleteCourseFromParent($event)" [dataCourses]="courses"></app-table-courses>
 }
 @else {
 
