--- a/src/app/components/table-courses/table-courses.component.html
+++ b/src/app/components/table-courses/table-courses.component.html
@@ -3,6 +3,8 @@
         <div
             class="table-responsive"
         >
+
+        {{ myDate | date: 'dd/MM/yyyy' }}
             <table
                 class="table table-dark"
             >
@@ -18,9 +20,9 @@
                     @for(course of dataCourses; track course.id) {
 
                         <tr class="">
-                            <td scope="row">{{ course.title }}</td>
+                            <td scope="row">{{ course.title | titlecase }}</td>
                             <td><img width="100px" [src]="course.image" [alt]="course.title" srcset=""></td>
-                            <td>{{ course.price }}</td>
+                            <td>{{ course.price | currency:'USD':'symbol':'1.0-3' }}</td>
                             <td class="text-end">
                                 <button (click)="changeStatusCourse(course)" 
                                 [ngClass]="{
