--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     class="navbar navbar-expand-sm navbar-dark bg-primary"
 >
     <div class="container">
-        <a class="navbar-brand" href="#">Eurafric</a>
+        <a class="navbar-brand" routerLink="/home">Eurafric</a>
         <button
             class="navbar-toggler d-lg-none"
             type="button"
@@ -17,50 +17,28 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav me-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#" aria-current="page"
+                    <a class="nav-link" routerLinkActive="active" routerLink="/home" aria-current="page"
                         >Home
                         <span class="visually-hidden">(current)</span></a
                     >
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" routerLinkActive="active" routerLink="/elearning">Courses</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a
-                        class="nav-link dropdown-toggle"
-                        href="#"
-                        id="dropdownId"
-                        data-bs-toggle="dropdown"
-                        aria-haspopup="true"
-                        aria-expanded="false"
-                        >Dropdown</a
-                    >
-                    <div
-                        class="dropdown-menu"
-                        aria-labelledby="dropdownId"
-                    >
-                        <a class="dropdown-item" href="#"
-                            >Action 1</a
-                        >
-                        <a class="dropdown-item" href="#"
-                            >Action 2</a
-                        >
-                    </div>
+                <li class="nav-item">
+                    <a class="nav-link" routerLinkActive="active" routerLink="/todos">Todos</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLinkActive="active" routerLink="/github">Users</a>
+                </li>
+               
             </ul>
-            <form class="d-flex my-2 my-lg-0">
-                <input
-                    class="form-control me-sm-2"
-                    type="text"
-                    placeholder="Search"
-                />
-                <button
-                    class="btn btn-outline-success my-2 my-sm-0"
-                    type="submit"
-                >
-                    Search
-                </button>
-            </form>
+
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a routerLink="/auth/signup" class="nav-link">Register</a></li>
+                <li class="nav-item"><a routerLink="/auth/signin" class="nav-link">Login</a></li>
+            </ul>
+           
         </div>
     </div>
 </nav>
