--- a/src/app/pages/courses/courses.component.html
+++ b/src/app/pages/courses/courses.component.html
@@ -1,6 +1,7 @@
 <!-- .container>(.row.my-5>(.col-6>h1{List of courses})+(.col-6.text-end>btn.btn.btn-success.btn-sm{Add}))+(.row.my-4>(.form-group>label{Title}+input:text.form-control#title)+(.form-group>label{Image}+input:url.form-control#image)+(.form-group>label{Price}+input:number.form-control#price)+(.form-group>label{Content}+textarea.form-control#content)+(.d-grid.my-3>btn.btn-primary{Save})) -->
 
-
+   <!-- <input type="text" [ngModel]="text()" (ngModelChange)="text.set($event)">
+    {{ text() }} -->
     <div class="row my-5">
         <div class="col-6">
             <h1>List of courses</h1>
