--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,9 +20,9 @@
 @else {
     <p>can't show this division</p>
 } -->
-
+<app-navbar></app-navbar>
 <div class="container">
-    <app-courses></app-courses>
+    <router-outlet></router-outlet>
 </div>
 
 
