--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -31,6 +31,9 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLinkActive="active" routerLink="/github">Users</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLinkActive="active" routerLink="/blog">Blog</a>
+                </li>
                
             </ul>
 
